tests/ui/tuple/coercion-slice.stderr
error[E0308]: mismatched types
  --> $DIR/coercion-slice.rs:11:23
   |
LL |     let _: (&[u8],) = y;
   |            --------   ^ expected `(&[u8],)`, found `(&[_; 0],)`
   |            |
   |            expected due to this
   |
   = note: expected tuple `(&[u8],)`
              found tuple `(&[_; 0],)`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
